[gd_scene load_steps=32 format=2]

[ext_resource path="res://img/Spaceship-Sheet.png" type="Texture" id=1]
[ext_resource path="res://player/Exhaust.tscn" type="PackedScene" id=2]
[ext_resource path="res://audio/gun.wav" type="AudioStream" id=3]
[ext_resource path="res://player/Player.gd" type="Script" id=4]
[ext_resource path="res://player/GunController.gd" type="Script" id=5]
[ext_resource path="res://player/BombController.gd" type="Script" id=7]
[ext_resource path="res://player/LaserController.gd" type="Script" id=8]
[ext_resource path="res://player/ShieldController.gd" type="Script" id=9]
[ext_resource path="res://audio/player_death.wav" type="AudioStream" id=10]
[ext_resource path="res://Tec/Hurtbox_.tscn" type="PackedScene" id=11]

[sub_resource type="Animation" id=1]
resource_name = "Center"
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hurtbox_/CS_Center:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hurtbox_/CS_Light:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hurtbox_/CS_Hard:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "HardLeft"
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hurtbox_/CS_Center:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hurtbox_/CS_Light:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hurtbox_/CS_Hard:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hurtbox_/CS_Hard:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "HardRight"
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hurtbox_/CS_Center:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hurtbox_/CS_Light:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hurtbox_/CS_Hard:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hurtbox_/CS_Hard:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Left"
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hurtbox_/CS_Center:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hurtbox_/CS_Light:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hurtbox_/CS_Hard:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hurtbox_/CS_Light:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hurtbox_/CS_Center:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hurtbox_/CS_Light:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hurtbox_/CS_Hard:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hurtbox_/CS_Hard:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hurtbox_/CS_Light:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Right"
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hurtbox_/CS_Center:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hurtbox_/CS_Light:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hurtbox_/CS_Light:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hurtbox_/CS_Hard:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Center"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "HardLeft"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "HardRight"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Left"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Right"

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=13]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=20]
states/Center/node = SubResource( 7 )
states/Center/position = Vector2( 361, 75 )
states/HardLeft/node = SubResource( 8 )
states/HardLeft/position = Vector2( 13, 75 )
states/HardRight/node = SubResource( 9 )
states/HardRight/position = Vector2( 750, 75 )
states/Left/node = SubResource( 10 )
states/Left/position = Vector2( 195, 75 )
states/Right/node = SubResource( 11 )
states/Right/position = Vector2( 541, 75 )
transitions = [ "HardLeft", "Left", SubResource( 12 ), "Left", "Center", SubResource( 13 ), "Center", "Right", SubResource( 14 ), "Right", "HardRight", SubResource( 15 ), "HardRight", "Right", SubResource( 16 ), "Right", "Center", SubResource( 17 ), "Center", "Left", SubResource( 18 ), "Left", "HardLeft", SubResource( 19 ) ]
start_node = "Center"
graph_offset = Vector2( -203, -20 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=21]

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 4 )

[node name="GunController" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="GunController"]
wait_time = 0.2
one_shot = true

[node name="Audio" type="AudioStreamPlayer" parent="GunController"]
stream = ExtResource( 3 )
bus = "SFX"

[node name="Position" type="Position2D" parent="GunController"]
position = Vector2( 0, -29 )

[node name="BombController" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="LaserController" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="ShieldController" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Exhaust" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 24 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 5
frame = 2

[node name="Collision" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -9, 23, -9, -3, -6, -3, -4, -18, -1, -23, 1, -23, 4, -18, 6, -3, 9, -3, 9, 23 )

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
anims/Center = SubResource( 1 )
anims/HardLeft = SubResource( 2 )
anims/HardRight = SubResource( 3 )
anims/Left = SubResource( 4 )
anims/RESET = SubResource( 5 )
anims/Right = SubResource( 6 )

[node name="AnimTree" type="AnimationTree" parent="."]
tree_root = SubResource( 20 )
anim_player = NodePath("../AnimPlayer")
active = true
parameters/playback = SubResource( 21 )

[node name="Hurtbox_" parent="." instance=ExtResource( 11 )]
collision_layer = 8
collision_mask = 0

[node name="CS_Center" type="CollisionPolygon2D" parent="Hurtbox_"]
polygon = PoolVector2Array( -22, 8, -17, 3, -11, 3, -6, -3, -4, -18, -1, -23, 1, -23, 4, -18, 6, -3, 11, 3, 17, 3, 22, 8, 22, 17, 19, 18, -19, 18, -22, 17 )

[node name="CS_Light" type="CollisionPolygon2D" parent="Hurtbox_"]
polygon = PoolVector2Array( -14, 10, -5, -4, -5, -13, -1, -23, 2, -23, 5, -15, 5, -6, 17, 6, 17, 18, 9, 20, -9, 20, -14, 16 )
disabled = true

[node name="CS_Hard" type="CollisionPolygon2D" parent="Hurtbox_"]
polygon = PoolVector2Array( -8, 19, -7, 7, -5, -1, -5, -14, -1, -23, 2, -23, 5, -15, 5, -6, 11, 4, 11, 18 )
disabled = true

[node name="AudioDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = 5.0
bus = "SFX"

[node name="DeathTimer" type="Timer" parent="."]

[connection signal="hit" from="Hurtbox_" to="." method="_on_Hurtbox__hit"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
